@@ -1,6 +1,7 @@
 /*
  * sbt
- * Copyright 2011 - 2018, Lightbend, Inc.
+ * Copyright 2023, Scala center
+ * Copyright 2011 - 2022, Lightbend, Inc.
  * Copyright 2008 - 2010, Mark Harrah
  * Licensed under Apache License 2.0 (see LICENSE)
  */
@@ -8,10 +9,15 @@
 package sbt.internal;
 
 import java.io.File;
+import java.io.IOException;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+import java.net.URLConnection;
+import java.nio.file.Paths;
 import xsbti.*;
 
 /**
@@ -22,8 +28,14 @@ import xsbti.*;
  * we can avoid loading any classes from the old scala provider.
  */
 public class XMainConfiguration {
-  public xsbti.MainResult run(String moduleName, xsbti.AppConfiguration configuration) {
+  public xsbti.MainResult run(String moduleName, xsbti.AppConfiguration configuration)
+      throws Throwable {
     try {
+      boolean isScripted = Boolean.parseBoolean(System.getProperty("sbt.scripted"));
+      // in batch scripted tests, we disable caching of JAR URL connections to avoid
+      // interference
+      // between tests
+      if (isScripted) disableCachingOfURLConnections();
       ClassLoader topLoader = configuration.provider().scalaProvider().launcher().topLoader();
       xsbti.AppConfiguration updatedConfiguration = null;
       try {
@@ -55,8 +67,8 @@ public class XMainConfiguration {
         clw.getMethod("warmup").invoke(clw.getField("MODULE$").get(null));
         return (xsbti.MainResult) runMethod.invoke(instance, updatedConfiguration);
       } catch (InvocationTargetException e) {
-        // This propogates xsbti.FullReload to the launcher
-        throw (xsbti.FullReload) e.getCause();
+        // This propagates xsbti.FullReload to the launcher
+        throw e.getCause();
       }
     } catch (ReflectiveOperationException e) {
       throw new RuntimeException(e);
@@ -70,9 +82,10 @@ public class XMainConfiguration {
       URL url = baseLoader.getResource(className);
       String path = url.toString().replaceAll(className.concat("$"), "");
       URL[] urlArray = new URL[1];
-      urlArray[0] = new URL(path);
+      urlArray[0] = new URI(path).toURL();
       ClassLoader topLoader = configuration.provider().scalaProvider().launcher().topLoader();
-      // This loader doesn't have the scala library in it so it's critical that none of the code
+      // This loader doesn't have the scala library in it so it's critical that none
+      // of the code
       // in this file use the scala library.
       ClassLoader modifiedLoader = new XMainClassLoader(urlArray, topLoader);
       Class<?> xMainConfigurationClass =
@@ -103,9 +116,26 @@ public class XMainConfiguration {
     }
   }
 
+  private class FakeURLConnection extends URLConnection {
+    public FakeURLConnection(URL url) {
+      super(url);
+    }
+
+    public void connect() throws IOException {}
+  }
+
+  private void disableCachingOfURLConnections() {
+    try {
+      URLConnection conn = new FakeURLConnection(Paths.get(".").toUri().toURL());
+      conn.setDefaultUseCaches(false);
+    } catch (MalformedURLException e) {
+    }
+  }
+
   /*
-   * Replaces the AppProvider.loader method with a new loader that puts the sbt test interface
-   * jar ahead of the rest of the sbt classpath in the classloading hierarchy.
+   * Replaces the AppProvider.loader method with a new loader that puts the sbt
+   * test interface jar ahead of the rest of the sbt classpath in the classloading
+   * hierarchy.
    */
   public class ModifiedConfiguration implements xsbti.AppConfiguration {
     private xsbti.AppConfiguration configuration;
